fix z-index but in services

--- a/src/nav/nav.scss
+++ b/src/nav/nav.scss
@@ -16,6 +16,7 @@
 	font-weight: bold;
 	
 	@include mobile {
+		justify-content: center;
 		letter-spacing: 0vw;
 		font-size: 1em;
 	}	
